Modal vertical align center issue while data come from third party.
- Remove JavsScrip which is useed for modal vertical align center.
- Added css for modal vertical align center.
- Add ".pmd-modal-center" class beside ".modal"

--- a/components/modal/css/modal.css
+++ b/components/modal/css/modal.css
@@ -1,5 +1,6 @@
+
 /*!
- * Propeller v1.0.0 (http://propeller.in)
+ * Propeller v1.0.0 (http://propeller.in): modal.css
  * Copyright 2016-2017 Digicorp, Inc.
  * Licensed under MIT (http://propeller.in/LICENSE)
  */
@@ -23,7 +24,12 @@
 .modal .radio, .modal .checkbox{margin:16px 0;}
 .modal .radio-options > label{padding-left:32px;}
 .modal .list-group.pmd-list-avatar{margin:8px 4px;padding:0}
-.modal .list-group:last-child{margin-bottom:0;}
+.modal.list-group:last-child{margin-bottom:0;}
 
 /* Form css */
 .form-horizontal .form-group{ margin-left:0; margin-right:0;}
+
+/* Modal center */
+.pmd-modal-center { text-align:center; padding:0 !important;}
+.pmd-modal-center:before { content: ''; display:inline-block; height: 100%; vertical-align: middle; margin-right: -4px;}
+.pmd-modal-center .modal-dialog { display:inline-block; text-align:left; vertical-align:middle;}
